--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^15.0.0",
+    "@types/leaflet.markercluster": "^1.5.1",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "h3-js": "^4.0.1",
+    "leaflet": "^1.9.3",
+    "leaflet.markercluster": "^1.5.3",
+    "mongoose": "^6.8.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -27,6 +36,7 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
