--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "angular_leaflet:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": ""
           },
           "configurations": {
             "production": {
